# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\api\LoginController;
+use App\Http\Controllers\api\UserSignUpController;
 
 /*
 |--------------------------------------------------------------------------
@@ -16,6 +17,10 @@ use App\Http\Controllers\api\LoginController;
 |
 */
 
+// Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+//     return $request->user();
+// });
+
 Route::prefix('v1')->group(function() {
 
     Route::prefix('auth')->group(function() {
@@ -23,8 +28,6 @@ Route::prefix('v1')->group(function() {
         Route::post('logout', [LoginController::class, 'logout']);
     });
 
-});
+    Route::post('registration', UserSignUpController::class);
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
 });
